[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Scripts/Enemies/BigEnemies/BigRoundEnemies.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SceneList/AttackScenes/BurnType1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/SceneList/AttackScenes/Explosions/Exploding.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/SceneList/ItemsScenes/ProgressBar/ProgressBar.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 349.941

[sub_resource type="CircleShape2D" id=4]
radius = 315.178

[node name="BigRoundEnemies" type="KinematicBody2D" groups=[
"BigEnemy",
"BigRoundEnemy",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.81023, 3.08841 )
frames = SubResource( 1 )
animation = "Walk"

[node name="Particles2D" type="Particles2D" parent="AnimatedSprite"]
speed_scale = 2.0
process_material = SubResource( 2 )

[node name="ProgressBar" parent="AnimatedSprite" instance=ExtResource( 4 )]
position = Vector2( -79.7304, -125.534 )
scale = Vector2( 0.3, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="BurnType1" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FlameBurn" parent="BurnType1" index="1"]
scale = Vector2( 2.11032, 2.2114 )

[node name="Exploding" parent="." instance=ExtResource( 3 )]
visible = false

[node name="RangedAttackSpot" type="Area2D" parent="." groups=[
"enemy_ranged_attack_spot",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangedAttackSpot"]
shape = SubResource( 4 )

[node name="Inertia Timer" type="Timer" parent="."]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="finished" from="Exploding" to="." method="_on_Exploding_finished"]
[connection signal="timeout" from="Inertia Timer" to="." method="_on_Inertia_Timer_timeout"]

[editable path="BurnType1"]
